--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ blinker==1.6.3
 click==8.1.7
 Flask==3.0.0
 Flask-Admin==1.6.1
+Flask-Login==0.6.3
 Flask-SQLAlchemy==3.1.1
 greenlet==3.0.1
 gunicorn==21.2.0
